# ffetch

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
nix/: default.nix
src/: ascii.cpp  includes.h  main.cpp  main.rs  sysinfo.cpp
src/ascii/: arch_linux.txt  ascii.cpp  ascii.h  ascii_arts.h  endeavouros.txt
src/ascii/ascii-arts/: arch_linux_small.txt
src/config/: config.cpp  config.h
src/sysinfo/: cpu.rs  distro.rs  host.rs  kernel.rs  ram.rs  user.cpp  user.h
src/sysinfo/cpu/: cpu.cpp  cpu.h
src/sysinfo/distro/: distro.cpp  distro.h
src/sysinfo/distro_id/: distro_id.cpp  distro_id.h
src/sysinfo/host/: host.cpp  host.h
src/sysinfo/hostname/: hostname.cpp  hostname.h
src/sysinfo/kernel/: kernel.cpp  kernel.h
src/sysinfo/ram/: ram.cpp  ram.h
src/sysinfo/shell/: shell.cpp  shell.h
src/sysinfo/terminal/: terminal.cpp  terminal.h
src/sysinfo/uptime/: uptime.cpp  uptime.h
src/sysinfo/wm/: wm.cpp  wm.h
src/utils/: utils.cpp  utils.h
